# fashion-tech

./: AGENTS.md  FLOOR.md  HEARTBEAT.md  PROJECT-PATHS.md  SECRETS.md  SOUL.md  SPRINT-PROTOCOL.md  TASK-PROTOCOL.md
workspace/backend/: .dockerignore  .env.example  Dockerfile  FILE_MANIFEST.md  FINAL_DELIVERY_REPORT.md  ORCHESTRATION_SUMMARY.md  QUICK_LINKS.md  README.md  WEEK1_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml
workspace/backend/alembic/: env.py
workspace/backend/alembic/versions/: 001_initial_schema.py  002_create_indices.py  003_add_constraints.py  004_week2_scan_pipeline.py
workspace/backend/docs/: API_SPEC.md  DEPLOYMENT.md  SETUP.md
workspace/backend/scripts/: init_db.sh  migrate.sh  run.sh  seed_garments.py  seed_production.py  test.sh
workspace/backend/src/app/: config.py  dependencies.py  main.py
workspace/backend/src/app/database/: __init__.py  engine.py
workspace/backend/src/app/middleware/: __init__.py  request_logging.py  security_headers.py
workspace/backend/src/app/models/: __init__.py  base.py  garment.py  outfit.py  retailer.py  scan.py  user.py
workspace/backend/src/app/routers/: __init__.py  auth.py  garments.py  health.py  outfits.py  retailers.py  scans.py  users.py
workspace/backend/src/app/schemas/: __init__.py  auth.py  base.py  garment.py  outfit.py  scan.py  user.py
workspace/backend/tests/: conftest.py  test_auth.py  test_auth_service.py  test_garment_service.py  test_garments.py  test_integration.py  test_models.py  test_s3_service.py  test_scans.py  test_users.py  test_week2_integration.py
(+272 files in other folders)
